<resources>
    <string name="app_name">ComplexCalc</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="symbol_divide">/</string>
    <string name="symbol_delete"><![CDATA[<<]]></string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="symbol_multiply">x</string>
    <string name="symbol_clear">C</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="symbol_subtract">-</string>
    <string name="symbol_result">=</string>
    <string name="_0">0</string>
    <string name="symbol_dot">.</string>
    <string name="symbol_add">+</string>
</resources>