<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/visor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp" />
    
    <GridLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:rowCount="4"
        android:alignmentMode="alignBounds"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/btn_7"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/_7"
            android:text="@string/_7" />
        <Button
            android:id="@+id/btn_8"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/_8"
            android:text="@string/_8" />
        <Button
            android:id="@+id/btn_9"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/_9"
            android:text="@string/_9" />
        <Button
            android:id="@+id/btn_divide"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/symbol_divide"
            android:text="@string/symbol_divide" />
        <Button
            android:id="@+id/btn_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/symbol_delete"
            android:text="@string/symbol_delete" />

        <Button
            android:id="@+id/btn_4"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/_4"
            android:text="@string/_4" />
        <Button
            android:id="@+id/btn_5"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/_5"
            android:text="@string/_5" />
        <Button
            android:id="@+id/btn_6"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/_6"
            android:text="@string/_6" />
        <Button
            android:id="@+id/btn_multiply"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/symbol_multiply"
            android:text="@string/symbol_multiply" />
        <Button
            android:id="@+id/btn_clear"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/symbol_clear"
            android:text="@string/symbol_clear" />

        <Button
            android:id="@+id/btn_1"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/_1"
            android:text="@string/_1" />
        <Button
            android:id="@+id/btn_2"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/_2"
            android:text="@string/_2" />
        <Button
            android:id="@+id/btn_3"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/_3"
            android:text="@string/_3" />
        <Button
            android:id="@+id/btn_subtract"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/symbol_subtract"
            android:text="@string/symbol_subtract" />

        <Button
            android:id="@+id/btn_result"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/symbol_result"
            android:text="@string/symbol_result"
            android:layout_rowSpan="2"
            android:layout_rowWeight="1"
            android:gravity="center" />

        <Button
            android:id="@+id/btn_0"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/_0"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:text="@string/_0" />
        <Button
            android:id="@+id/btn_dot"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/symbol_dot"
            android:text="@string/symbol_dot" />
        <Button
            android:id="@+id/btn_add"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="btnAction"
            android:tag="@string/symbol_add"
            android:text="@string/symbol_add" />


    </GridLayout>

</LinearLayout>